renames to better matches

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,1 @@
-<div id="customer-filter">
-  <div style="display: flex; justify-content: space-between; align-items: center">
-    <span>Customer filter</span>
-    <a class="discard">Discard filters</a>
-  </div>
-  <div class="filter-steps-box">
-    <filter-steps></filter-steps>
-  </div>
-  <button class="apply">Apply filters</button>
-</div>
+<customer-filter></customer-filter>
