--- a/src/app/funnel-step/funnel-step.html
+++ b/src/app/funnel-step/funnel-step.html
@@ -1,4 +1,4 @@
 <div>
-  <span>1. Step: {{ stepSignal().eventType }}</span>
+  <span>{{ num }}. Step: {{ stepSignal().eventType }}</span>
   <event></event>
 </div>
