apply filters logs in console

--- a/src/app/customer-filter/customer-filter.html
+++ b/src/app/customer-filter/customer-filter.html
@@ -14,5 +14,5 @@
     }
     <a class="add-link" (click)="addStep()">+ ADD FUNNEL STEP</a>
   </div>
-  <button class="apply">Apply filters</button>
+  <button class="apply" (click)="applyFilters()">Apply filters</button>
 </div>
