discard filters reset the steps

--- a/src/app/customer-filter/customer-filter.html
+++ b/src/app/customer-filter/customer-filter.html
@@ -1,7 +1,7 @@
 <div id="customer-filter">
   <div style="display: flex; justify-content: space-between; align-items: center">
     <span>Customer filter</span>
-    <a class="discard">Discard filters</a>
+    <a class="discard" (click)="discardFilters()">Discard filters</a>
   </div>
   <div class="filter-steps-box">
     @for (step of funnelSteps(); track $index) {
