--- a/src/app/funnel-step/funnel-step.html
+++ b/src/app/funnel-step/funnel-step.html
@@ -1,8 +1,7 @@
-<div>
-  <span>{{ num }}. Step: {{ stepSignal().eventType }}</span>
+<p>{{ num }}. Step: {{ stepSignal().eventType }}</p>
 
-  <div class="event-selector">
-    <label for="event">Event:</label>
+<div class="funnel-step">
+  <div class="filter-row">
     <select id="event" [(ngModel)]="stepSignal().eventType">
       <option value="Unnamed step" disabled>Select an event</option>
 
@@ -10,48 +9,55 @@
       <option [value]="event">{{ event }}</option>
       }
     </select>
-  </div>
-  <div>
-    @if (stepSignal().eventType !== 'Unnamed step') { @for (filter of stepSignal().filters ??
-    [{attribute: '', operator: '', value: ['']}]; track $index) {
+
     <div>
-      <attribute
-        [attributes]="propertiesForEvent"
-        [selected]="filter?.attribute ?? ''"
-        (selectedChange)="updateFilter($index, 'attribute', $event)"
-      >
-      </attribute>
+      @if (stepSignal().eventType !== 'Unnamed step' && hasActiveFilters()) { @for (filter of
+      stepSignal().filters ?? [{attribute: '', operator: '', value: ['']}]; track $index) {
+      <div>
+        <attribute
+          [attributes]="propertiesForEvent"
+          [selected]="filter?.attribute ?? ''"
+          (selectedChange)="updateFilter($index, 'attribute', $event)"
+        >
+        </attribute>
 
-      <operator
-        [type]="filter.type ?? 'string'"
-        [selected]="filter.operator"
-        (selectedChange)="updateFilter($index, 'operator', $event)"
-      >
-      </operator>
-      @if (filter.operator === 'in between') {
-      <input
-        type="text"
-        [value]="filter.value?.[0] ?? ''"
-        (input)="updateFilter($index, 'value', [$event.target.value, filter.value?.[1] ?? ''])"
-      />
-      and
-      <input
-        type="text"
-        [value]="filter.value?.[1] ?? ''"
-        (input)="updateFilter($index, 'value', [filter.value?.[0] ?? '', $event.target.value])"
-      />
-      } @else {
+        <operator
+          [type]="filter.type ?? 'string'"
+          [selected]="filter.operator"
+          (selectedChange)="updateFilter($index, 'operator', $event)"
+        >
+        </operator>
+        @if (filter.operator === 'in between') {
+        <input
+          type="text"
+          [value]="filter.value?.[0] ?? ''"
+          (input)="updateFilter($index, 'value', [$event.target.value, filter.value?.[1] ?? ''])"
+        />
+        and
+        <input
+          type="text"
+          [value]="filter.value?.[1] ?? ''"
+          (input)="updateFilter($index, 'value', [filter.value?.[0] ?? '', $event.target.value])"
+        />
+        } @else {
 
-      <input
-        type="text"
-        [value]="filter.value?.[0] ?? ''"
-        (input)="updateFilter($index, 'value', $event.target.value)"
-      />
-      } @if ($last === false) {
-      <div class="filter-separator">AND</div>
+        <input
+          type="text"
+          [value]="filter.value?.[0] ?? ''"
+          (input)="updateFilter($index, 'value', $event.target.value)"
+        />
+        }
+        <span class="remove-filter" (click)="removeFilter($index)">X</span>
+
+        @if ($last === false) {
+        <div class="filter-separator">AND</div>
+        }
+      </div>
+      }}@if (stepSignal().eventType !== 'Unnamed step') {
+      <a class="refine-link" (click)="addFilter()"
+        >@if (hasActiveFilters()) {Refine more} @else {Add filter}</a
+      >
       }
     </div>
-    }} @if (stepSignal().filters !== undefined ){
-    <a class="refine-link" (click)="addFilter()">Refine more</a> }
   </div>
 </div>
