--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+select,
+input {
+  font-size: 14px;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
